--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,52 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  @apply bg-gray-100;
+  @apply overflow-y-scroll;
+}
+
 nav li .active,
 aside li .active {
   @apply bg-gray-100;
-}
-
-.columns {
-  display: -ms-grid;
-  display: grid;
-  grid-gap: 1rem;
-  gap: 1rem;
-  grid-auto-flow: column;
-  grid-auto-columns: minmax(0, 1fr);
-}
-
-.column {
-  --tw-border-opacity: 1;
-  border-color: rgba(170, 189, 223, var(--tw-border-opacity));
-  border-width: 1px;
-  display: -ms-grid;
-  display: grid;
-  padding: 0.75rem;
-  grid-gap: 1rem;
-  gap: 1rem;
-  grid-auto-flow: row;
-  grid-auto-columns: minmax(0, 1fr);
-  grid-auto-rows: -webkit-min-content;
-  grid-auto-rows: min-content;
-}
-
-.sortable {
-  --tw-bg-opacity: 1;
-  background-color: rgba(79, 136, 198, var(--tw-bg-opacity));
-  border-radius: 0.5rem;
-  cursor: move;
-  font-weight: 700;
-  padding: 1rem;
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0/0.1), 0 1px 2px -1px rgb(0 0 0/0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color),
-    0 1px 2px -1px var(--tw-shadow-color);
-  -webkit-box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
-    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
-    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  text-align: center;
-  --tw-text-opacity: 1;
-  color: rgba(255, 255, 255, var(--tw-text-opacity));
-  white-space: normal;
-  touch-action: none;
 }
