--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,3 +6,48 @@ html {
   @apply bg-gray-100;
   @apply overflow-y-scroll;
 }
+
+:root {
+  --loader-bg-color: linear-gradient(
+    90deg,
+    rgba(234, 88, 11, 1) 20%,
+    rgba(233, 30, 99, 1) 50%,
+    rgba(255, 255, 255, 0) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+}
+
+.loader {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 4px;
+  z-index: 9999;
+}
+
+.loader.active {
+  background: var(--loader-bg-color);
+  background-size: 200%;
+  background-position-x: 100%;
+  animation: loader-scroll 3s ease forwards;
+}
+
+.loader.inactive {
+  background: var(--loader-bg-color);
+  background-size: 200%;
+  background-position-x: 0%;
+  opacity: 0;
+  transition: opacity 0.3s ease-in;
+}
+
+@keyframes loader-scroll {
+  0% {
+    background-position-x: 100%;
+  }
+  50% {
+    background-position-x: 5%;
+  }
+  100% {
+    background-position-x: 0%;
+  }
+}
